--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,42 +1,121 @@
-:root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+body {
+  font-size: 20px;
 }
 
-body {
-  margin: 100px;
+.page {
+  color: #ff8c00;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
   font-size: 30px;
+  line-height: 21px;
+  position: absolute;
+  left: 30px;
+}
+
+.gallery {
+  margin-top: 200px;
+  display: grid;
+  width: 1200px;
+  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+  grid-gap: 12px;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-submit {
+  width: 160px;
+  height: 45px;
+  background: blue;
+  border-radius: 15px;
+  border: transparent;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 21px;
+  display: block;
+  align-items: center;
+  text-align: center;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 250ms ease-in-out;
+
+  // &:focus,
+  &:hover {
+    box-shadow: 0 0 5px 0 rebeccapurple inset, 0 0 2px 5px rebeccapurple;
+    outline: transparent;
+  }
+}
+
+.btn-load {
+  display: none;
+}
+
+.btn-load-visible {
+  display: block;
+  width: 160px;
+  height: 45px;
+  background: blue;
+  border-radius: 15px;
+  border: transparent;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 21px;
+  align-items: center;
+  text-align: center;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 250ms ease-in-out;
+
+  // &:focus,
+  &:hover {
+    box-shadow: 0 0 5px 0 rebeccapurple inset, 0 0 2px 5px rebeccapurple;
+    outline: transparent;
+  }
+}
+
+.links {
+  list-style: none;
+}
+
+.search-form {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .input {
   display: flex;
   padding: 20px;
   margin-bottom: 20px;
-  //margin-left: 40%;
   width: 500px;
   height: 50px;
   border: 2px solid #ff8c00;
   border-radius: 5px;
   cursor: pointer;
+  outline: transparent;
   margin-left: auto;
   margin-right: auto;
 }
 
-.img {
-  float: right;
-  margin-right: 30px;
-}
-
-.title {
-  text-align: center;
-  font-size: 50px;
-}
-
-.capital,
-.languages,
-.pop {
-  font-weight: bold;
-}
-
-.text {
-  font-weight: normal;
+.box {
+  position: fixed;
+  margin-top: 0;
+  margin-bottom: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 200px;
+  background-color: yellow;
 }
